<resources>
    <string name="app_name">ChatApp</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home">HomeActivity</string>


    <string name="tab_text_1">CHATS</string>
    <string name="tab_text_2">STATUS</string>
    <string name="tab_text_3">CALLS</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="capture_button_alt">Capture</string>
    <string name="switch_camera_button_alt">Switch camera</string>
    <string name="gallery_button_alt">Gallery</string>
    <string name="back_button_alt">Back</string>
    <string name="share_button_alt">Share</string>
    <string name="share_hint">Share using</string>
    <string name="capture_mode_camera">Camera</string>
    <string name="capture_mode_hdr">HDR</string>
    <string name="capture_mode_night">Night</string>
    <string name="delete_button_alt">Delete</string>
    <string name="delete_dialog">Delete current photo?</string>
    <string name="delete_title">Confirm</string>
    <string name="negative_button">Not Now</string>
    <string name="positive_button">Continue</string>


    <string name="selection_limiter">Can\'t select more than %d items.</string>
    <string name="bottom_message_without_video">Drag images up for gallery</string>
    <string name="bottom_message_with_video">Hold for video, tap for photo</string>
    <string name="ok">OK</string>
    <string name="tap_to_select">Tap photo to select</string>
    <string name="selected">Selected</string>
    <string name="recent">Recent</string>
    <string name="last_month">Last Month</string>
    <string name="last_week">Last Week</string>
    <string name="cannot_click_image">Can not add more than %s images</string>
    <string name="title_activity_chat_info">ChatInfoActivity</string>


    <string name="action_settings">Settings</string>


    <string name="register_phone_header">Enter your phone number</string>
    <string name="register_phone_number_code_confirm">WhatsApp will send an SMS message to verify your phone number.</string>
    <string name="whats_my_number">What\'s my number?</string>
    <string name="register_phone_number_sms_charge_warning">Carrier SMS charges may apply</string>
    <string name="register_number_mistyped_suggestion">Did you mean %s?</string>
    <string name="next">Next</string>
    <string name="pick_a_country">Choose a country</string>
    <string name="register_invalid_cc_cap">Invalid country code</string>
    <string name="register_phone_your_number">phone number</string>
    <string name="country">Country</string>
    <string name="register_bad_cc_valid">Invalid country code.</string>
    <string name="register_empty_phone">Please enter your phone number.</string>
    <string name="register_bad_phone_too_short">The phone number you entered is too short for the country: %s.\10\10Include your area code if you haven\'t.</string>
    <string name="register_bad_phone_too_long">The phone number you entered is too long for the country: %s.</string>
    <string name="register_bad_phone">Invalid phone number length for the country: %s.</string>
    <string name="register_check_connectivity">Unable to connect. Please check that you are connected to the Internet and try again.\10\10%s</string>
    <string name="connectivity_self_help_instructions">Please reboot your phone if your connection problem persists.</string>
    <string name="back">Back</string>
    <string name="search_country_hint">Search countries</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="search_no_matches">No matches found</string>
    <string name="permission_read_phone_number_permission_needed">To retrieve your phone number, WhatsApp needs permissions to make and manage your calls. Without this permission, WhatsApp will be unable to retrieve your phone number from the SIM. Tap Settings &gt; Permissions, and turn Phone on.</string>
    <string name="permission_read_phone_number_request">To retrieve your phone number, WhatsApp needs permissions to make and manage your calls. Without this permission, WhatsApp will be unable to retrieve your phone number from the SIM.</string>
    <string name="register_bad_cc_length_with_placeholders">Invalid country code length (%1$d–%2$d digits only).</string>
    <string name="select_phone_number_dialog_title">Select number</string>
    <string name="verify_sms_description">Waiting to automatically detect an SMS sent to $ccc $phone. &lt;a href=\"edit-number\"&gt;Wrong number?&lt;/a&gt;></string>
    <string name="verify_sms_roaming_warning">It looks like you are roaming, so you might have problems receiving SMS or calls.</string>
    <string name="retry">Retry</string>
    <string name="verify_description_bottom">Enter %1$d-digit code</string>
    <string name="verify_resend_sms_button">Resend SMS</string>
    <string name="verify_voice_call_button">Call me</string>
    <string name="install_app_shortcut">Include WhatsApp shortcut on home screen</string>
    <string name="profile_photo">Profile photo</string>
    <string name="register_name_hint">Type your name here</string>
    <string name="emoji_button_description">Emoji</string>
    <string name="network_required">Check your phone\'s Internet connection and try again.</string>
    <string name="sticker_store_content_description">Sticker Store</string>
    <string name="starred_gifs">Starred GIFs</string>
    <string name="no_recent_gifs">No Recent GIFs</string>
    <string name="gif_search_no_results">No results</string>
    <string name="backspace">Backspace</string>
    <string name="sticker_tab_content_description">Pick a sticker</string>
    <string name="gif_search">Pick a GIF</string>
    <string name="emoji_picker">Pick an emoji</string>
    <string name="ok_got_it">OK, GOT IT</string>
    <string name="skin_tone_emoji_tip">You can tap and hold some emoji to choose a different color</string>
    <string name="register_name_info">Please provide your name and an optional profile photo</string>
    <string name="register_name_profile">Profile info</string>
    <string name="conversation_sharing_live_location">Sharing live location</string>
    <string name="menuitem_pin">Pin chat</string>
    <string name="menuitem_mute_notifications">Mute notification</string>

</resources>